--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,6 +21,6 @@
                     <button type="submit">Submit</button>
                 </div>
             </form>
-            <p class="form_msg">Not have an account ? <a href="">Register</a></p>
+            <p class="form_msg">Not have an account ? <a href="/register">Register</a></p>
         </div>
     </section>
