--- a/views/register.ejs
+++ b/views/register.ejs
@@ -25,6 +25,6 @@
                     <button type="submit">Submit</button>
                 </div>
             </form>
-            <p class="form_msg">ALready have an account ? <a href="">Login</a></p>
+            <p class="form_msg">ALready have an account ? <a href="/login">Login</a></p>
         </div>
     </section>
