--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,6 +9,9 @@
 <p class="lead mb-3">Email - <%= user.email %></p>
 <p class="lead mb-3">password - <%= user.password %></p>
 <p class="lead mb-3">Date - <%= user.date %></p>
+
+
+<a href="/create_blog">create_blog</a>
 </section>
 
 
