adding blog page

--- a/views/latest_news.ejs
+++ b/views/latest_news.ejs
@@ -5,209 +5,24 @@
         <h2>Latest News</h2>
     </div>
         <div class="flex all_blog">
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
+
+            <% data.articles.forEach(article => { %>
+                <div class="blog_card">
+                    <div class="blog_img">
+                        <img src="<%= article.urlToImage %>" alt="<%= article.title %>">
+                    </div>
+                    <div class="blog_content">
+                        <a href="<%= article.url %>">
+                            <p class="blog_author"><%= article.author %> • <%= new Date(article.publishedAt).toLocaleDateString() %></p>
+                            <h1 class="blog_title"><%= article.title %></h1>
+                            <p class="blog_text"><%= article.description %></p>
+                            
+                        </a>
+                    </div>
                 </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Leadership</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
-                </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Management</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
-                </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Management</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
-                </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Management</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
-                </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Management</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
-                </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Management</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
-                </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Management</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
-                </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Management</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
-                </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Management</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
-                </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Management</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
-                </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Management</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="blog_card">
-                <div class="blog_img">
-                    <img src="./img/img.webp" alt="">
-                </div>
-                <div class="blog_content">
-                    <a href="#">
-                        <p class="blog_author">Alec Whitten • 1 Jan 2023</p>
-                        <h1 class="blog_title">The Impact of Technology on the Workplace: How Technology is Changing</h1>
-                        <p class="blog_text">Like to know the secrets of transforming a 2-14 team into a 3x Super Bowl winning Dynasty?</p>
-                        <div class="tags">
-                            <span>Leadership</span>
-                            <span>Management</span>
-                            <span>Frameworks</span>
-                        </div>
-                    </a>
-                </div>
-            </div>
+            <% }); %>
+
+
+            
         </div>
     </section>
