--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,9 +20,9 @@
                     </label>
                 </div>
                 <div class="form_group">
-                    <button type="submit">Submit</button>
+                    <button type="submit" class="btn_submit">Submit</button>
                 </div>
             </form>
-            <p class="form_msg">Not have an account ? <a href="/register">Register</a></p>
+            <p class="form_msg">Not have an account ? <a href="/users/register">Register</a></p>
         </div>
     </section>
