--- a/views/create_blog.ejs
+++ b/views/create_blog.ejs
@@ -1,59 +1,59 @@
+<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
+<style>
+  .ql-*,.ql-* button{
+    all:unset !important;
+  }
+  #editor .ql-editor {
+    font-size: 18px;
+    height: 200px;
+  }
+</style>
 <section class="container" id="hero">
   
   <div class="form blog">
     <div class="form-box">
-        <h2 class="form_title">Create blog</h2>
+      <h2 class="form_title">Create blog</h2>
         
         <%- include('partials/messages') %>
 
-        <form action="" method="post">
-
+        <form id="blogForm" action="/create_blog" method="post">
+          <div class="grid col-2">
             <div class="form_group">
                 <label for="Email">Email Address</label>
-                <input type="email" class="input_box" name="email" id="Email" placeholder="Enter Email Address">
+                <input type="email" class="input_box" name="email" id="Email" value="<%= user.email %>" required readonly  placeholder="Enter Email Address">
+            </div>
+
+            <div class="form_group">
+                <label for="author">Author name</label>
+                <input type="text" class="input_box" name="author" id="author" value="<%= user.name %>" required readonly  placeholder="Enter Author Name">
+            </div>
+          </div>
+
+            <div class="form_group">
+                <label for="Blog_Title">Blog Title</label>
+                <input type="text" class="input_box" name="title" id="Blog_Title" placeholder="Enter Blog Title">
             </div>
             
             <div class="form_group">
-                <button type="submit">Submit</button>
+                <label for="Blog Content">Blog Content</label>
+                <div id="editor"></div>
+                <input type="hidden" name="content" id="blogContent" />
+            </div>
+            
+            
+            
+            <div class="form_group">
+                <button type="submit" class="btn_submit">Submit</button>
             </div>
         </form>
     </div>
   </div>
 
 
-  <h2 class="lead mb-3">Welcome <%= user.name %></h2>
-  <p class="lead mb-3">Email - <%= user.email %></p>
-
-  <!-- Include stylesheet -->
-  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
-
-  <!-- Create the form and editor container -->
-  <form id="blogForm" action="/create_blog" method="post">
-    <!-- Add other form fields as needed -->
-    <label for="a">author:</label>
-    <input type="text" id="a" name="author" value="<%= user.name %>" required />
-
-    <label for="title">Title:</label>
-    <input type="text" id="title" name="title" required />
-
-    <!-- Create the Quill editor container -->
-    <div id="editor"></div>
-
-    <!-- Hidden input to store Quill content -->
-    <input type="hidden" name="content" id="blogContent" />
-
-    <!-- Submit button -->
-    <button type="submit">Save Blog</button>
-  </form>
-
-  <!-- Include the Quill library -->
   <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
   <!-- Initialize Quill editor -->
   <script>
-    //   var quill = new Quill('#editor', {
-    //     theme: 'snow'
-    //   });
     var quill = new Quill("#editor", {
       modules: {
         toolbar: [
