--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,9 +24,9 @@
                     </label>
                 </div>
                 <div class="form_group">
-                    <button type="submit">Submit</button>
+                    <button type="submit" class="btn_submit">Submit</button>
                 </div>
             </form>
-            <p class="form_msg">ALready have an account ? <a href="/login">Login</a></p>
+            <p class="form_msg">Already have an account ? <a href="/users/login">Login</a></p>
         </div>
     </section>
